<resources>
    <string name="app_name">
    My Life Balance </string>
    <string name="quiz_slogan"> Work  Balance Life
        </string>
    <string name="Welcome_text">Login</string>
    <string name="TO1">TO</string>
    <string name="Acc">Your Account</string>
    <string name="en_language">English</string>
    <string name="ar_language">عربى</string>
    <string name="hi_language">हिन्दी</string>
    <string name="email">Enter Your User Name</string>
    <string name="Pass">Enter Your Password</string>
    <string name="password">Enter Your Password</string>
    <string name="signup">Signup</string>
    <string name="signnew">Are you new.Signup now</string>
    <string name="signne">Are you new.Signup now</string>

    <string name="select_quiz">SELECT QUIZ</string>
    <string name="quiz_instruction">QUIZ INSTRUCTION</string>
    <string name="your_best_score">YOUR BEST SCORE</string>
    <string name="quiz_user_score_table">QUIZ TOP SCORERS</string>
    <string name="total_best_score">93%</string>
    <string name="quiz_category">Quiz Category</string>
    <string name="sports">Sport Category</string>
    <string name="question_title">Question</string>
    <string name="question">What is the highest mountain in the world right now?</string>
    <string name="everest">Mount Everest</string>
    <string name="next_button">NEXT QUESTION</string>
    <string name="pass">PASS</string>
    <string name="fail">FAIL</string>
    <string name="quiz_result">Quiz Result</string>
    <string name="retake_quiz">Retake quiz</string>
    <string name="view_result">View result</string>
    <string name="question_num">Question 12</string>
    <string name="your_answer">Your answer</string>
    <string name="correct_answer">Correct answer</string>
    <string name="quiz_result_analysis">Quiz Result Analysis</string>
    <string name="no_quiz_in_category">There is no quiz in this category. Add a new quiz</string>
    <string name="logout">SignOut</string>
    <string name="sign">Signin</string>
    <string name="weL_nam">Welcome,Zunera</string>
    <string name="Emails">zunera_hotmail.com</string>
    <string name="quiz_btn">Start Quiz</string>
    <string name="Reg">Create  Account</string>
    <string name="Msgg">After clicking the Register Button. You will be redirected to Login Screen</string>
    <string name="Name">Enter  Your Full Name</string>
    <string name="Email">Enter Your Email</string>
    <string name="Password">Enter Your Password</string>
    <string name="Mobile">Enter Your Mobile No</string>
    <string name="signupreg">Register</string>


</resources>
