<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Welcome_text"
        android:textSize="70sp"
        android:id="@+id/textView"
        android:textColor="#34495E"
        android:layout_marginTop="65dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TO1"
        android:textColor="#34495E"
        android:textSize="20sp"
        android:id="@+id/textView2"
        android:layout_marginTop="72dp"
        android:layout_alignTop="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Acc"
        android:textColor="#34495E"
        android:textSize="25sp"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/txtemail"
        android:singleLine="true"
        android:drawablePadding="10dp"

        android:hint="@string/email"
        android:textColorHint="#34495E"
        android:textColor="#34495E"
        android:textSize="20sp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:drawablePadding="10dp"
        android:singleLine="true"
        android:hint="@string/Pass"

        android:textSize="20sp"
        android:textColorHint="#34495E"
        android:textColor="#34495E"
        android:id="@+id/txtpass"
        android:layout_below="@+id/txtemail"
        android:layout_alignLeft="@+id/txtemail"
        android:layout_alignStart="@+id/txtemail"
        android:layout_alignRight="@+id/txtemail"
        android:layout_alignEnd="@+id/txtemail" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:textColor="#34495E"
        android:text="@string/sign"
        android:textSize="20sp"
        android:id="@+id/btnsignin"
        android:layout_below="@+id/txtpass"
        android:layout_marginTop="6dp"
        android:layout_alignLeft="@+id/txtpass"
        android:layout_alignStart="@+id/txtpass"
        android:layout_alignRight="@+id/txtpass"
        android:layout_alignEnd="@+id/txtpass" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/signne"
        android:id="@+id/btnreg"
        android:textColor="#34495E"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/btnsignin"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Language_layout"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="0dp">


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:text="@string/en_language"
        android:id="@+id/TVEnglish"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_below="@+id/btnreg"
        android:textColor="#34495E"
        android:layout_alignLeft="@+id/btnsignin"
        android:layout_alignStart="@+id/btnsignin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:text="@string/hi_language"
        android:id="@+id/TVHindi"
        android:textColor="#34495E"
    android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_below="@+id/btnreg"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:text="@string/ar_language"
        android:id="@+id/TVFrench"
        android:textColor="#34495E"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_below="@+id/btnreg"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />




</RelativeLayout>